	that was meant to do this.  This fixes Savannah bug #47188.
	* src/search.c (findnextstr): Clean up and rename a variable.
	* src/search.c (findnextstr): Poll the keyboard once per second.
	* src/winio.c (reset_cursor): Remove a pointless condition, and make
	use of an existing intermediary variable.
	* src/winio.c (reset_cursor): Tidy up and rename a variable.

2016-03-22  Thomas Rosenau  <thomasr@fantasymail.de>
	* configure.ac, src/*.c: Check for the existence of the REG_ENHANCED
	regex flag, and use it when it's available (on OS X systems).  This
	completes the fix for Savannah bug #47325.

2016-03-21  Benno Schulenberg  <bensberg@justemail.net>
	* src/browser.c (findnextfile): Trim a duplicate variable.
	* src/browser.c (browser_refresh, findnextfile): Rename four vars.

2016-03-20  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (do_writeout), src/nano.c (do_exit): Normalize the
	punctuation in some prompts: no space before a question mark, and
	a semicolon instead of a comma between phrases.
	* src/text.c (do_cutword): Don't put cut words into the cutbuffer --
	that is: treat the deletion of words like pressing Backspace/Delete.
	* src/search.c (get_history_completion, find_history): Cycle through
	the items from newest to oldest.  This fixes Savannah bug #47205.
	* src/files.c (do_writeout): When the name of the file was changed,
	always ask whether this is okay.  This fixes Savannah bug #46894.
	* src/search.c (do_research): Use 'return' instead of 'else'.
	* src/search.c (do_search): Don't bother setting 'answer'; just	use
	'last_search', which has been set to 'answer' in search_init().
	* src/search.c (go_looking): Factor out the common part of
	do_search() and do_research() into this new function.

2016-03-19  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (search_init): Always remember the last typed string,
	also when it's an invalid regex.  This fixes Savannah bug #47440.